# Deep-Activity-Recognition

./: .gitignore  README.md  demo_generate.ipynb  pyproject.toml  requirements.txt
config/: config.yaml
logs/training_logs/: b1_test_predictions.csv  b1_training.csv  b3_ann_training.csv  b3_training.csv  b4_test_predictions.csv  b4_training.csv
logs/training_logs/baseline1/: b1_training.csv
logs/training_logs/baseline4/: b4_training.csv
logs/training_logs/baseline5/: b5_test_predictions.csv  b5_training.csv
logs/training_logs/baseline6/: b6_training.csv
models/b1/: best_model.pth
models/b3/: best_model.pth
models/b3_resnet/: best_model.pth
models/b4/: best_model.pth
models/b5/: best_model.pth
models/b6/: best_model.pth
models/b7/: best_model.pth
models/b8/: best_model.pth
scripts/: download_dataset.sh
src/Preprocessing/: __init__.py  extract_features.py  volleyball_annot_loader.py
src/baseline1/: dataset.py  extended_model.py  finetune_resnet50.py  plotting_results.py
src/helpers/: __init__.py  datasets.py  extract_features_helper.py  finetune_helper.py  visualize_helper.py
src/models/: baseline1.py  baseline3.py  baseline4.py  baseline5_and_6.py  baseline7.py  baseline8.py
src/stores/: __init__.py
src/testers/: b1_tester.py  b3_tester.py  b4_tester.py  b5_tester.py  b6_tester.py  b7_tester.py  b8_tester.py
src/utils/: __init__.py  checkpoints_utils.py  extract_features_utils.py  finetune_utils.py  plotting_utils.py  test_utils.py  train_utils.py  val_utils.py  visualize_utils.py
test_video/4_frames/: annotations.txt
(+189 files in other folders)
